--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,26 @@
     "name": "kabyfed/minesweeper",
     "type": "project",
     "license": "MIT",
+    "require": {
+        "wp-cli/php-cli-tools": "^0.12.1"
+    },
     "autoload": {
         "psr-4": {
             "Kabyfed\\Minesweeper\\": "src/"
         },
         "files": [
             "src/Controller.php",
+            "src/Game.php",
             "src/View.php"
         ]
     },
+    "bin": [
+        "bin/minesweeper"
+    ],
     "authors": [
         {
             "name": "Artem",
             "email": "artem0fedoseev15@mail.ru"
         }
-    ],
-    "bin": [
-        "bin/minesweeper"
-    ],
-    "require": {
-        "wp-cli/php-cli-tools": "^0.12.0"
-    }
+    ]
 }
