--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "bin/minesweeper"
     ],
     "require": {
-        "wp-cli/php-cli-tools": "^0.12.0"
+        "wp-cli/php-cli-tools": "^0.12.0",
+         "gabordemooij/redbean": "^5.7"
     }
 }
